--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MD. NAYEM ISLAM | Solar PV Engineer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Analytics Script - Replace 'G-XXXXXXXXXX' with your Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
     <style>
         :root {
             --primary: #27ae60;
@@ -868,9 +876,12 @@
                         <div class="skill">PVsyst</div>
                         <div class="skill">Solar PV System Design</div>
                         <div class="skill">Electrical Design</div>
+                        <div class="skill">IEC Standards</div>
+                        <div class="skill">Single-Line Diagrams</div>
                         <div class="skill">Utility-Scale Projects</div>
                         <div class="skill">Project Commissioning</div>
                     </div>
+                    <a href="MD_NAYEM_ISLAM.pdf" download class="btn" style="margin-top: 30px;">Download Resume</a>
                 </div>
                 <div class="about-image">
                     <div class="about-img">
@@ -958,13 +969,13 @@
             <div class="education-container">
                 <div class="education-item">
                     <h3>Diploma in Electrical Engineering</h3>
-                    <div class="institution">Hosenabad Govt. Technical Scool & College </div>
-                    <div class="year">2020</div>
+                    <div class="institution">Hosenabad Govt. TSC, Doulatpur, Kushtia</div>
+                    <div class="year">2020 | Result: 3.51/4.00</div>
                 </div>
                 <div class="education-item">
                     <h3>Secondary School Certificate (SSC)</h3>
-                    <div class="institution">Durgapur Pilot High School</div>
-                    <div class="year">2016 </div>
+                    <div class="institution">Durgapur Pilot High School, Rajshahi</div>
+                    <div class="year">2016 | Result: 4.69/5.00</div>
                 </div>
             </div>
         </div>
@@ -1047,22 +1058,22 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec" method="POST">
                         <div class="form-group">
                             <label for="name">Your Name</label>
-                            <input type="text" id="name" class="form-control" required>
+                            <input type="text" id="name" name="name" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Your Email</label>
-                            <input type="email" id="email" class="form-control" required>
+                            <input type="email" id="email" name="email" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
-                            <input type="text" id="subject" class="form-control" required>
+                            <input type="text" id="subject" name="subject" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Your Message</label>
-                            <textarea id="message" class="form-control" required></textarea>
+                            <textarea id="message" name="message" class="form-control" required></textarea>
                         </div>
                         <button type="submit" class="btn">Send Message</button>
                     </form>
@@ -1089,7 +1100,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025@NAYEM ISLAM. All Rights Reserved.</p>
+                <p>&copy; 2025 MD. NAYEM ISLAM. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -1180,6 +1191,14 @@
             el.style.transform = 'translateY(20px)';
             el.style.transition = 'opacity 0.5s ease, transform 0.5s ease';
             observer.observe(el);
+        });
+
+        // Track resume download as GA event
+        document.querySelector('a[download]').addEventListener('click', function() {
+            gtag('event', 'download', {
+                'event_category': 'Resume',
+                'event_label': 'Resume Download'
+            });
         });
     </script>
 </body>
