--- a/index.html
+++ b/index.html
@@ -969,13 +969,13 @@
             <div class="education-container">
                 <div class="education-item">
                     <h3>Diploma in Electrical Engineering</h3>
-                    <div class="institution">Hosenabad Govt. TSC, Doulatpur, Kushtia</div>
-                    <div class="year">2020 | Result: 3.51/4.00</div>
+                    <div class="institution">Hosenabad Govt. TSC</div>
+                    <div class="year">2020 </div>
                 </div>
                 <div class="education-item">
                     <h3>Secondary School Certificate (SSC)</h3>
-                    <div class="institution">Durgapur Pilot High School, Rajshahi</div>
-                    <div class="year">2016 | Result: 4.69/5.00</div>
+                    <div class="institution">Durgapur Pilot High School</div>
+                    <div class="year">2016 </div>
                 </div>
             </div>
         </div>
@@ -1058,7 +1058,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm" action="https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec" method="POST">
+                    <form id="contactForm" action="https://script.google.com/macros/s/AKfycbyBZyFPD-jlDVzCEfTuehXR3Njg2pBmLS3WGDT_71BcBtcmBgRhsO7uMLvRE4bnlrSUXw/exec" method="POST">
                         <div class="form-group">
                             <label for="name">Your Name</label>
                             <input type="text" id="name" name="name" class="form-control" required>
